2008-07-18  Maurice van der Pot  <griffon26@kfk4ever.com>

	* Makefile.win32:
	* installer/planner-installer.nsi:
	Fixed paths to executable in installer and included GTK+ translations.
	Thanks to Massimiliano Franco for bringing these problems to my attention.

2008-07-17  Maurice van der Pot  <griffon26@kfk4ever.com>

	* Makefile.win32:
	* installer/english.nsh:
	* installer/langmacros.nsh:
	* installer/planner-installer.nsi:
	* libplanner/Makefile.win32:
	* src/Makefile.win32:
	Added a 'createinstaller' target to the Makefiles for Windows that uses the
	Nullsoft scriptable install system to create an installer.

2008-04-29  Maurice van der Pot  <griffon26@kfk4ever.com>

	* tests/Makefile.am: Fix for parallel build issue reported as bug #529045 by
	Gilles Dartiguelongue <gilles.dartiguelongue@esiee.org>

2008-04-20  Maurice van der Pot  <griffon26@kfk4ever.com>

	* configure.in: Enabling evolution data server backend support caused
	configure to fail (bug #528971). Thanks to Robin Cook <rcook@wyrms.net> for
	noticing and providing a patch.
	* libplanner/Makefile.am: Adding -lm to LIBADD for libplanner as suggested
	by Marcin Banasiak <megabajt@pld-linux.org>, hopefully fixing bug #528582
	reported by Patryk Zawadzki <patrys@pld-linux.org>.

2008-04-16  Maurice van der Pot  <griffon26@kfk4ever.com>

	* NEWS:
	* configure.in: Version 0.14.3

2008-04-15  Maurice van der Pot  <griffon26@kfk4ever.com>

	* data/mime/Makefile.am: Remove the update-desktop-database line altogether,
	because as far as I can tell it's the distribution's job to run it.
	The change previously committed was incorrect. The build may have succeeded,
	but the mimeinfo cache was generated in the wrong place.

2008-04-13  Maurice van der Pot  <griffon26@kfk4ever.com>

	* data/mime/Makefile.am: Prevent failure of update-desktop-database when not
	performing make install as root.

2008-04-08  Maurice van der Pot  <griffon26@kfk4ever.com>
