@@ -7,7 +7,7 @@ AC_DEFUN([PLANNER_COMPILE_WARNINGS],[
 	default_compile_warnings="no"
     fi
 
-    AC_ARG_WITH(compile-warnings, [  --with-compile-warnings=[no/yes/error] Compiler warnings ], [enable_compile_warnings="$withval"], [enable_compile_warnings="$default_compile_warnings"])
+    AC_ARG_ENABLE(compile-warnings, [  --enable-compile-warnings=[no/yes/error] Compiler warnings ], [], [enable_compile_warnings="$default_compile_warnings"])
 
     warnCFLAGS=
     if test "x$GCC" != xyes; then
